Alpha release 0.2
Updated addEvent params
Added test results
Implemented code coverage tool
Added meeting minutes